# lox

./: .dockerignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMMANDS.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Dockerfile  Dockerfile.release  PR60_REVIEW.md  QUALITY_ASSESSMENT.md  README.md  install.ps1
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl
.beads/hooks/: post-checkout  post-commit  post-merge  pre-push
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml  pages.yml  release.yml
Formula/: lox.rb
docs/: _config.yml  api-research.md  architecture.md  automations.md  contributing.md  design-backup-inspect.md  design-backup.md  getting-started.md  index.md  plan.md
docs/commands/: configuration.md  controls.md  index.md  inspection.md  system.md
docs/guides/: ai-agents.md  config-versioning.md  index.md  opentelemetry.md  scenes.md
k8s/: deployment.yaml  secret.yaml
src/: client.rs  config.rs  daemon.rs  ftp.rs  gitops.rs  loxcc.rs  loxone_xml.rs  main.rs  otel.rs  scene.rs  stream.rs  token.rs  ws.rs
src/commands/: config_cmd.rs  control.rs  ctx.rs  inspect.rs  mod.rs  system.rs
tests/: cli_smoke.rs
